--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -72,3 +72,21 @@ button:hover {
   background-color: red;
   color: white;
 }
+
+.remove-btn {
+  background-color: darkred;
+  color: white;
+  border: none;
+  padding: 10px 16px;
+  font-size: 1rem;
+  font-weight: 600;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
+  margin-top: 10px;
+}
+
+.remove-btn:hover {
+  background-color: red;
+}
+
