--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -73,6 +73,18 @@ button:hover {
   color: white;
 }
 
+.profile-link {
+  display: block;
+  margin-bottom: 10px; /* Adds space below the link */
+  color: #646cff;
+  font-weight: bold;
+}
+
+.button-container {
+  text-align: center;
+  margin-top: 5px;
+}
+
 .remove-btn {
   background-color: darkred;
   color: white;
@@ -83,10 +95,23 @@ button:hover {
   border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.3s ease-in-out;
-  margin-top: 10px;
 }
 
 .remove-btn:hover {
   background-color: red;
 }
 
+.home-link {
+  display: inline-block;
+  margin-top: 15px;
+  padding: 10px 15px;
+  background-color: #646cff;
+  color: white;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+.home-link:hover {
+  background-color: #535bf2;
+}
